--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,12 @@ section#telefone
     width: 312px;
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
+
+iframe#tela
+{
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+}
